# ablr_assignment

./: .gitignore  README.md  pyproject.toml
ablr/: db.sqlite3  manage.py
ablr/ablr/: asgi.py  settings.py  urls.py  views.py  wsgi.py
ablr/frontend/: package-lock.json  package.json
ablr/frontend/public/: index.html
ablr/frontend/src/: App.js
ablr/frontend/src/components/: ContactCard.jsx  Field.jsx  FieldTitle.jsx  IncomeCard.jsx  OthersCard.jsx  PersonalCard.jsx
ablr/frontend/src/pages/: Callback.jsx  Home.jsx
ablr/myinfo/: apps.py  myinfo_client.py  security.py  tests.py  views.py
tests/: test_ablr_assignment.py
