[tool.poetry]
name = "ablr_assignment"
version = "0.1.0"
description = ""
authors = ["Stewart Wong <siwei.wong@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^3.2.9"
djangorestframework = "^3.12.4"
django-cors-headers = "^3.10.0"
requests = "^2.26.0"
PyJWT = "^2.3.0"
jwcrypto = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.11b1"
isort = "^5.10.1"
mypy = "^0.910"
django-types = "^0.10.0"
types-requests = "^2.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
